--- a/proj.win32/TGPSEM2.vcxproj
+++ b/proj.win32/TGPSEM2.vcxproj
@@ -163,7 +163,7 @@ xcopy /Y /Q "$(COCOS_FRAMEWORKS)\cocos2d-x-3.9\prebuilt\win32\*.*" "$(OutDir)"
     <ClCompile Include="..\Classes\LevelSelect.cpp" />
     <ClCompile Include="..\Classes\MenuScene.cpp" />
     <ClCompile Include="..\Classes\ParticleModel.cpp" />
-    <ClCompile Include="..\Classes\MovingPlatform.cpp" />
+    <ClCompile Include="..\Classes\MovablePlatform.cpp" />
     <ClCompile Include="..\Classes\ScalingObject.cpp" />
     <ClCompile Include="..\Classes\Player.cpp" />
     <ClCompile Include="..\Classes\SceneManager.cpp" />
@@ -172,7 +172,7 @@ xcopy /Y /Q "$(COCOS_FRAMEWORKS)\cocos2d-x-3.9\prebuilt\win32\*.*" "$(OutDir)"
     <ClCompile Include="..\Classes\Switch.cpp" />
     <ClCompile Include="..\Classes\SwitchTimer.cpp" />
     <ClCompile Include="..\Classes\TouchManager.cpp" />
-    <ClCompile Include="..\Classes\Wall.cpp" />
+    <ClCompile Include="..\Classes\MovableWall.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -193,7 +193,7 @@ xcopy /Y /Q "$(COCOS_FRAMEWORKS)\cocos2d-x-3.9\prebuilt\win32\*.*" "$(OutDir)"
     <ClInclude Include="..\Classes\LevelSelect.h" />
     <ClInclude Include="..\Classes\MenuScene.h" />
     <ClInclude Include="..\Classes\ParticleModel.h" />
-    <ClInclude Include="..\Classes\MovingPlatform.h" />
+    <ClInclude Include="..\Classes\MovablePlatform.h" />
     <ClInclude Include="..\Classes\ScalingObject.h" />
     <ClInclude Include="..\Classes\Player.h" />
     <ClInclude Include="..\Classes\SceneManager.h" />
@@ -202,7 +202,7 @@ xcopy /Y /Q "$(COCOS_FRAMEWORKS)\cocos2d-x-3.9\prebuilt\win32\*.*" "$(OutDir)"
     <ClInclude Include="..\Classes\Switch.h" />
     <ClInclude Include="..\Classes\SwitchTimer.h" />
     <ClInclude Include="..\Classes\TouchManager.h" />
-    <ClInclude Include="..\Classes\Wall.h" />
+    <ClInclude Include="..\Classes\MovableWall.h" />
     <ClInclude Include="Define.h" />
     <ClInclude Include="main.h" />
   </ItemGroup>
